237 - fixed the live quizzes to allow for overflow - WL EI

--- a/public/stylesheets/myQuizzes.css
+++ b/public/stylesheets/myQuizzes.css
@@ -86,6 +86,6 @@
 	font-size:.9em;
 	line-height:.4;
 }
-#results .scroller {
+.scroller {
 	overflow-y:auto;
 }
